1.RTP数据帧发送时的分片模块，即当RTP数据帧较长时分成若干个数据包发送 2.RTP数据帧发送时转化为数据包的头部模块

--- a/VideoRTSPServer/VideoRTSPServer.vcxproj
+++ b/VideoRTSPServer/VideoRTSPServer.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MideaFile.cpp" />
+    <ClCompile Include="RTPHelper.cpp" />
     <ClCompile Include="RTSPServer.cpp" />
     <ClCompile Include="VideoRTSPServer.cpp" />
   </ItemGroup>
@@ -136,6 +137,7 @@
     <ClInclude Include="IQtestmachineQueue.h" />
     <ClInclude Include="IQtestmachineThread.h" />
     <ClInclude Include="MideaFile.h" />
+    <ClInclude Include="RTPHelper.h" />
     <ClInclude Include="RTSPServer.h" />
     <ClInclude Include="Socket.h" />
   </ItemGroup>
