--- a/VideoRTSPServer/VideoRTSPServer.vcxproj.filters
+++ b/VideoRTSPServer/VideoRTSPServer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MideaFile.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RTPHelper.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Socket.h">
@@ -42,6 +45,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="base.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RTPHelper.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
